--- a/sonar.properties
+++ b/sonar.properties
@@ -3,6 +3,7 @@
 sonar.projectKey=TestNG_Practice
 sonar.projectName=Test_Practice
 sonar.projectVersion=25
+sonar.login=cnes_report
 
 # Project source settings
 sonar.sources=src/main/java
